feature: inicio feature importar transações

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -70,7 +70,12 @@ button:hover {
   background: var(--light-green);
 }
 
-.button.new {
+.create-transactions {
+  display: flex;
+  justify-content: space-between;
+}
+
+.button.new .button.import {
   display: inline-block;
   margin-bottom: 0.8rem;
 }
@@ -234,11 +239,18 @@ td > img {
   visibility: visible;
 }
 
-.modal {
+.modal,
+.modal-import {
+  visibility: hidden;
   background: #f2f2f5;
   padding: 2.4rem;
-  position: relative;
+  position: absolute;
   z-index: 1;
+}
+
+.modal.active,
+.modal-import.active {
+  visibility: visible;
 }
 
 .type {
