--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -72,6 +72,7 @@ button:hover {
 
 .create-transactions {
   display: flex;
+  /* width: 50%; */
   justify-content: space-between;
 }
 
@@ -119,7 +120,6 @@ header {
 }
 
 /*Cards*/
-
 .card {
   background: white;
   padding: 1.5rem 2rem;
@@ -148,7 +148,6 @@ header {
 }
 
 /*Table*/
-
 #transaction {
   display: block;
   overflow-x: auto;
@@ -164,19 +163,20 @@ header {
 table thead tr th:first-child,
 table tbody tr td:first-child {
   border-radius: 0.25rem 0 0 0.25rem;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
 }
 
 table thead tr th:last-child,
 table tbody tr td:last-child {
   border-radius: 0 0.25rem 0.25rem 0;
-  padding: 1rem 2rem;
+  padding: 1rem 1rem;
 }
 
 table thead th {
   background: white;
   font-weight: normal;
   text-align: left;
+  padding-left: 1rem;
 }
 
 table tbody tr {
@@ -189,6 +189,7 @@ table tbody tr:hover {
 
 table td {
   background: white;
+  padding-left: 1rem;
 }
 
 td.description {
@@ -294,6 +295,38 @@ td > img {
 .input-group.actions .button,
 .input-group.actions button {
   width: 48%;
+}
+
+#form-import {
+  max-width: 500px;
+}
+
+.modal-import {
+  padding: 2rem;
+}
+
+.modal-import h2 {
+  margin: 0;
+}
+
+.dropzone {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  width: 33rem;
+  height: 3rem;
+  border: 2px dashed #969cb3;
+  padding: 0.5rem;
+}
+
+.input-dropzone {
+  padding: 20rem;
+  display: none;
+}
+
+.dropzone label small {
+  opacity: 0.4;
+  cursor: pointer;
 }
 
 /*Footer*/
