feature: responsividade modal import

--- a/src/views/components/modal_import.ejs
+++ b/src/views/components/modal_import.ejs
@@ -1,4 +1,4 @@
-<div class="modal-import">
+<section class="modal-import">
   <div id="form-import">
     <h2>Importar Transação</h2>
     <form>
@@ -16,8 +16,8 @@
           tabindex="-1"
           id="input-dropzone"
         />
-        <label for="input-dropzone"
-          ><small> Somente arquivos .CSV </small>
+        <label for="input-dropzone">
+          <small>Selecione ou arraste o arquivo aqui.</small>
         </label>
       </div>
       <div class="input-group actions">
@@ -26,4 +26,5 @@
       </div>
     </form>
   </div>
-</div>
+  <footer class="footer-modal">Somente arquivos .CSV</footer>
+</section>
