--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -274,7 +274,7 @@ td > img {
 #form form input {
   border: none;
   border-radius: 0.2rem;
-  padding: 00.8rem;
+  padding: 0.8rem;
   width: 100%;
 }
 
@@ -302,10 +302,11 @@ td > img {
 }
 
 .modal-import {
-  padding: 2rem;
+  padding: 1rem 2.4rem;
 }
 
 .modal-import h2 {
+  /* padding: 0 2rem; */
   margin: 0;
 }
 
@@ -313,20 +314,29 @@ td > img {
   display: flex;
   align-items: center;
   margin-top: 10px;
-  width: 33rem;
+  width: 20rem;
   height: 3rem;
   border: 2px dashed #969cb3;
-  padding: 0.5rem;
+  padding: 1rem;
 }
 
 .input-dropzone {
-  padding: 20rem;
+  padding: 18rem;
   display: none;
 }
 
 .dropzone label small {
   opacity: 0.4;
   cursor: pointer;
+}
+
+.footer-modal {
+  padding: 0.5rem 0 0 0;
+  opacity: 0.4;
+  font-style: italic;
+  font-size: small;
+
+  text-align: start;
 }
 
 /*Footer*/
